<resources>
    <string name="app_name">CuisinHELHa</string>
    <string name="recipe_search_hint">Find a recipe...</string>
    <string name="title_activity_cuisin_helha__login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be at least 5 characters</string>
    <string name="login_failed">Log in failed</string>

    /** EDIT TEXTS **/
    <string name="et_pseudo">Pseudo</string>
    <string name="et_password">Password</string>

    /** BUTTONS **/
    <string name="btn_login">Log in</string>
    <string name="btn_continue">Continue</string>

    /** IMAGE VIEWS DESCRIPTIONS **/
    <string name="profile_icon_description">Header\'s profile icon.</string>
    <string name="search_icon_description">Header\'s search icon.</string>
    <string name="logo_description">Header\'s logo.</string>
    <string name="name_string">Name</string>
    <string name="summary_string">Summary</string>
    <string name="recipe_type_string">Recipe Type</string>
    <string name="preparation_time_string">Preparation Time</string>
    <string name="people_string">People</string>
    <string name="sprice_rate_string">Spice rate</string>
    <string name="ingredient_string">Ingredient</string>
    <string name="quantity_string">Quantity</string>
    <string name="unit_string">Unit</string>
    <string name="step_string">Step</string>

    /** PROFILE ACTIVITY **/
    <string name="user_details">Your details :</string>
    <string name="user_recipes">Your recipes :</string>
    <string name="user_comments">Your comments :</string>
    <string name="user_name">Name :</string>
    <string name="user_mail">Mail :</string>
    <string name="user_password">Password :</string>
</resources>
